<resources>
    <string name="app_name">Food Runner</string>
    <string name="app_home">Home</string>
    <string name="app_profile">My Profile</string>
    <string name="app_orders"> Order History</string>
    <string name="app_favorites">Favorite Restaurent</string>
    <string name="app_faq">FAQs</string>
    <string name="app_restaurants">Restaurents</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="app_logout">Logout</string>
    <string name="cart_proceed">PROCEED TO CART</string>
    <string name="choose_from_menu">Choose from the Menu Listed Below</string>
    <string name="cart_add">Add</string>
    <string name="ordering_from">Ordering From: </string>
    <string name="q1">Question 1. Why is Food Runner doing this?</string>
    <string name="a1">            At Food Runner we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. Food Runner Packaging Assist is to take care of all your packaging needs.</string>
    <string name="q2">Question 2. How are you guys different ?</string>
    <string name="a2">            We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for Food Runner Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="q3">Question 3. Why is Food Runner doing this?</string>
    <string name="a3">            At Food Runner we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. Food Runner Packaging Assist is to take care of all your packaging needs.</string>
    <string name="q4">Question 4. How are you guys different?</string>
    <string name="a4">            We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for Food Runner Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="mobilenumber">Mobile Number (10 digits)</string>
    <string name="password">Password (Min. 4 Characters)</string>
    <string name="forgot_password">"Forgot Password ? "</string>
    <string name="name">Name (Min. 3 Characters)</string>
    <string name="email">E-mail Address</string>
    <string name="DelieveryAddress">Delievery Address</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="place_order">Place Order</string>
    <string name="order_placed">Order Successfully Placed !</string>
    <string name="no_orders_placed">Oops! No Orders Placed yet</string>
    <string name="your_previous_orders">Your previuos Orders are listed below</string>
    <string name="answer_1">A.1 You will be taught using pre-recorded videos and text tutorials. The training has quizzes, assignments, and tests to help you learn better. At the end of the training, you will attempt a project to get hands-on practice of what you learn during your training.</string>
    <string name="answer_2">A.2 As this is a purely online training program, you can choose to learn at any time of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning hours can be decided by students according to their convenience.</string>
    <string name="answer_3">A.3 The training duration is of 6 weeks.</string>
    <string name="answer_4">A.4 We recommend spending 10-12 hours per week. However, the actual learning hours can be decided by you as per your convenience.</string>
    <string name="answer_5">A.5 You can choose your preferred batch date while signing up for the training program.</string>
    <string name="answer_6">A.6 You will be able to download the certificate once you complete your training and take the final test.</string>


</resources>

