<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item android:id="@+id/menu_home"
        android:title="@string/app_home"
        android:icon="@drawable/ic_action_home"/>

    <item android:id="@+id/menu_profile"
        android:title="@string/app_profile"
        android:icon="@drawable/ic_action_profile"/>

        <item android:id="@+id/menu_orders"
            android:title="@string/app_orders"
            android:icon="@drawable/ic_action_orders"/>

    <item android:id="@+id/menu_favorties"
        android:title="@string/app_favorites"
        android:icon="@drawable/ic_action_favourites"/>

    <item android:id="@+id/menu_faq"
        android:title="@string/app_faq"
        android:icon="@drawable/ic_action_faq"/>

    <item android:id="@+id/menu_logout"
        android:title="@string/app_logout"
        android:icon="@drawable/ic_action_logout"/>
    </group>

</menu>